push notification event configured
